ThePopularJob - feat: Add experience card, align buttons and fix links to blog

--- a/ThePopularJob/wwwroot/css/site.css
+++ b/ThePopularJob/wwwroot/css/site.css
@@ -126,3 +126,9 @@ body {
 .card-title{
     text-align:center;
 }
+
+.card-button {
+    color:#fff;  
+    position:absolute; 
+    bottom:1rem
+}
